--- a/services.html
+++ b/services.html
@@ -2,55 +2,29 @@
 <html lang="bg">
 <head>
 <meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Услуги | Счетоводно партньорство</title>
-<meta name="description" content="Предлагаме пълен набор от счетоводни услуги, съобразени с действащото законодателство и индивидуалните нужди на всяко дружество.">
-<style>
-:root{--bg:#0f172a;--bg-light:#111827;--text:#e5e7eb;--muted:#9ca3af;--accent:#38bdf8;--card:#020617;--border:#1f2933;}
-*{box-sizing:border-box;}
-body{margin:0;font-family:system-ui,sans-serif;background:linear-gradient(180deg,var(--bg),var(--bg-light));color:var(--text);line-height:1.6;}
-a{color:var(--accent);text-decoration:none;}
-header{border-bottom:1px solid var(--border);position:sticky;top:0;background:rgba(15,23,42,0.9);backdrop-filter:blur(8px);z-index:10;}
-nav{display:flex;justify-content:space-between;align-items:center;padding:0.5rem 1rem;}
-.logo img{height:90px;width:auto;}
-nav ul{list-style:none;display:flex;gap:1rem;margin:0;padding:0;align-items:center;}
-nav ul li img{width:28px;height:17.5px;object-fit:cover;margin-right:0.2rem;}
-section{padding:4rem 1rem;}
-h1,h2,h3{margin-top:0;line-height:1.25;}
-h1{font-size:2.4rem;}
-h2{font-size:1.8rem;margin-bottom:1rem;}
-h3{font-size:1.2rem;}
-p{color:var(--muted);}
-.grid{display:grid;grid-template-columns:repeat(auto-fit,minmax(260px,1fr));gap:1.5rem;margin-top:2rem;}
-.card{background:var(--card);border:1px solid var(--border);border-radius:10px;padding:1.5rem;text-align:center;}
-footer{border-top:1px solid var(--border);padding:2rem 1rem;font-size:0.85rem;color:var(--muted);}
-footer p{margin:0;}
-</style>
 </head>
 <body>
+<section style="padding:4rem 1rem;max-width:900px;margin:auto">
+<h1>Счетоводни услуги</h1>
+<p>
+Предлагаме пълен набор от счетоводни услуги, съобразени с действащото законодателство
+и индивидуалните нужди на всяко дружество.
+</p>
 
-<header>
-  <nav>
-    <div class="logo"><img src="logo.png" alt="Лого"></div>
-    <ul>
-      <li><a href="index.html">Начало</a></li>
-      <li><a href="about.html">За нас</a></li>
-      <li><a href="services.html">Услуги</a></li>
-      <li><a href="contact.html">Контакти</a></li>
-      <li>
-        <a href="#" onclick="changeLang('bg')"><img src="bg.png" alt="BG">BG</a> &nbsp;|&nbsp;
-        <a href="#" onclick="changeLang('en')"><img src="us.png" alt="US">US</a>
-      </li>
-    </ul>
-  </nav>
-</header>
+<ul>
+<li>Текущо счетоводно обслужване</li>
+<li>ТРЗ услуги</li>
+<li>Годишно счетоводно приключване и финансови отчети</li>
+<li>Комуникация с НАП, НОИ, НСИ и други институции</li>
+<li>Счетоводни и данъчни консултации</li>
+<li>Регистрация на фирми</li>
+</ul>
 
-<main>
-<section>
-  <h1>Услуги</h1>
-  <p>Предлагаме пълен набор от счетоводни услуги, съобразени с действащото законодателство и индивидуалните нужди на всяко дружество.</p>
-
-  <div class="grid">
-    <div class="card">Текущо счетоводно обслужване</div>
-    <div class="card">ТРЗ услуги</div>
-    <div class="card">Годишно счетоводно при
+<p>
+Обхватът на услугите и условията за работа се определят индивидуално,
+в зависимост от дейността и спецификата на клиента.
+</p>
+</section>
+</body>
+</html>
