--- a/contact.html
+++ b/contact.html
@@ -2,96 +2,33 @@
 <html lang="bg">
 <head>
 <meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Контакти | Счетоводно партньорство</title>
-<meta name="description" content="Свържете се с нашите независими счетоводни практики.">
-<style>
-:root{--bg:#0f172a;--bg-light:#111827;--text:#e5e7eb;--muted:#9ca3af;--accent:#38bdf8;--card:#020617;--border:#1f2933;}
-*{box-sizing:border-box;}
-body{margin:0;font-family:system-ui,sans-serif;background:linear-gradient(180deg,var(--bg),var(--bg-light));color:var(--text);line-height:1.6;}
-a{color:var(--accent);text-decoration:none;}
-header{border-bottom:1px solid var(--border);position:sticky;top:0;background:rgba(15,23,42,0.9);backdrop-filter:blur(8px);z-index:10;}
-nav{display:flex;justify-content:space-between;align-items:center;padding:0.5rem 1rem;}
-.logo img{height:90px;width:auto;}
-nav ul{list-style:none;display:flex;gap:1rem;margin:0;padding:0;align-items:center;}
-nav ul li img{width:28px;height:17.5px;object-fit:cover;margin-right:0.2rem;}
-section{padding:4rem 1rem;}
-h1,h2,h3{margin-top:0;line-height:1.25;}
-h1{font-size:2.4rem;}
-h2{font-size:1.8rem;margin-bottom:1rem;}
-h3{font-size:1.2rem;}
-p{color:var(--muted);}
-.grid{display:grid;grid-template-columns:repeat(auto-fit,minmax(260px,1fr));gap:1.5rem;margin-top:2rem;}
-.card{background:var(--card);border:1px solid var(--border);border-radius:10px;padding:1.5rem;text-align:center;}
-footer{border-top:1px solid var(--border);padding:2rem 1rem;font-size:0.85rem;color:var(--muted);}
-footer p{margin:0;}
-.cta {display:inline-block;margin-top:1rem;padding:0.7rem 1.2rem;border-radius:6px;background:var(--accent);color:#020617;font-weight:600;}
-</style>
 </head>
 <body>
-
-<header>
-<nav>
-<div class="logo"><img src="logo.png" alt="Лого"></div>
-<ul>
-<li><a href="index.html">Начало</a></li>
-<li><a href="about.html">За нас</a></li>
-<li><a href="services.html">Услуги</a></li>
-<li><a href="contact.html">Контакти</a></li>
-<li>
-<a href="#" onclick="changeLang('bg')"><img src="bg.png" alt="BG">BG</a> &nbsp;|&nbsp;
-<a href="#" onclick="changeLang('en')"><img src="us.png" alt="US">US</a>
-</li>
-</ul>
-</nav>
-</header>
-
-<main>
-<section>
+<section style="padding:4rem 1rem;max-width:900px;margin:auto">
 <h1>Избери счетоводител</h1>
-<p>Моля, изберете с коя счетоводна практика желаете да се свържете. Всяко запитване се обработва директно от съответната практика.</p>
 
-<div class="grid">
-<div class="card">
-<h3>ДТ БИЗНЕС СЪЛЮШЪНС ООД</h3>
-<p>Email: desy_i_t@yahoo.com<br>Телефон: +359878476656</p>
-</div>
+<p>
+Моля, изберете с коя счетоводна практика желаете да се свържете.
+Всяко запитване се обработва директно от съответната практика.
+</p>
 
-<div class="card">
-<h3>НорДиа ИНВЕСТ ЕООД</h3>
-<p>Email: office@nordiainvest.org<br>Телефон: +359883374600</p>
-</div>
-</div>
+<h2>„ДТ БИЗНЕС СЪЛЮШЪНС“ ООД</h2>
+<p>Телефон: +359 878 476 656<br>Email: desy_i_t@yahoo.com</p>
 
-<div style="text-align:center;margin-top:2rem;">
-<a href="https://calendly.com/office-nordiainvest/30min" target="_blank" class="cta">
-Резервирай безплатна онлайн среща (около 30 мин.), където да се запознаем, поговорим и отговорим на въпросите ти
+<h2>„НорДиа ИНВЕСТ“ ЕООД</h2>
+<p>Телефон: +359 883 374 600<br>Email: office@nordiainvest.org</p>
+
+<p style="margin-top:3rem">
+<a href="https://calendly.com/office-nordiainvest/30min" target="_blank">
+Резервирай безплатна онлайн среща (около 30 мин.)
 </a>
-</div>
+</p>
 
+<p style="margin-top:3rem;color:#9ca3af;font-size:.9rem">
+Настоящият сайт представя партньорство между независими счетоводни практики.
+Всеки договор се сключва директно със съответната практика и не поражда солидарна отговорност.
+</p>
 </section>
-</main>
-
-<footer>
-<p>Настоящият сайт представя партньорство между независими счетоводни практики.</p>
-</footer>
-
-<script>
-function changeLang(lang){
-  const page=window.location.pathname.split("/").pop();
-  if(lang==='en'){
-    if(page==='contact.html') window.location.href='contact-en.html';
-    if(page==='index.html') window.location.href='index-en.html';
-    if(page==='about.html') window.location.href='about-en.html';
-    if(page==='services.html') window.location.href='services-en.html';
-  }else if(lang==='bg'){
-    if(page==='contact-en.html') window.location.href='contact.html';
-    if(page==='index-en.html') window.location.href='index.html';
-    if(page==='about-en.html') window.location.href='about.html';
-    if(page==='services-en.html') window.location.href='services.html';
-  }
-}
-</script>
-
 </body>
 </html>
