--- a/services-en.html
+++ b/services-en.html
@@ -2,85 +2,31 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Services | Accounting Partnership</title>
-<meta name="description" content="We offer a full range of accounting services, compliant with legislation and tailored to the needs of each company.">
-<style>
-:root{--bg:#0f172a;--bg-light:#111827;--text:#e5e7eb;--muted:#9ca3af;--accent:#38bdf8;--card:#020617;--border:#1f2933;}
-*{box-sizing:border-box;}
-body{margin:0;font-family:system-ui,sans-serif;background:linear-gradient(180deg,var(--bg),var(--bg-light));color:var(--text);line-height:1.6;}
-a{color:var(--accent);text-decoration:none;}
-header{border-bottom:1px solid var(--border);position:sticky;top:0;background:rgba(15,23,42,0.9);backdrop-filter:blur(8px);z-index:10;}
-nav{display:flex;justify-content:space-between;align-items:center;padding:0.5rem 1rem;}
-.logo img{height:90px;width:auto;}
-nav ul{list-style:none;display:flex;gap:1rem;margin:0;padding:0;align-items:center;}
-nav ul li img{width:28px;height:17.5px;object-fit:cover;margin-right:0.2rem;}
-section{padding:4rem 1rem;}
-h1,h2,h3{margin-top:0;line-height:1.25;}
-h1{font-size:2.4rem;}
-h2{font-size:1.8rem;margin-bottom:1rem;}
-h3{font-size:1.2rem;}
-p{color:var(--muted);}
-.grid{display:grid;grid-template-columns:repeat(auto-fit,minmax(260px,1fr));gap:1.5rem;margin-top:2rem;}
-.card{background:var(--card);border:1px solid var(--border);border-radius:10px;padding:1.5rem;text-align:center;}
-footer{border-top:1px solid var(--border);padding:2rem 1rem;font-size:0.85rem;color:var(--muted);}
-footer p{margin:0;}
-</style>
 </head>
+
 <body>
+<section style="padding:4rem 1rem;max-width:900px;margin:auto">
+<h1>Accounting Services</h1>
 
-<header>
-  <nav>
-    <div class="logo"><img src="logo.png" alt="Logo"></div>
-    <ul>
-      <li><a href="index-en.html">Home</a></li>
-      <li><a href="about-en.html">About us</a></li>
-      <li><a href="services-en.html">Services</a></li>
-      <li><a href="contact-en.html">Contact</a></li>
-      <li>
-        <a href="#" onclick="changeLang('bg')"><img src="bg.png" alt="BG">BG</a> &nbsp;|&nbsp;
-        <a href="#" onclick="changeLang('en')"><img src="us.png" alt="US">US</a>
-      </li>
-    </ul>
-  </nav>
-</header>
+<p>
+We offer a full range of accounting services, fully compliant with current legislation
+and tailored to the individual needs of each company.
+</p>
 
-<main>
-<section>
-  <h1>Services</h1>
-  <p>We offer a full range of accounting services, compliant with legislation and tailored to the needs of each company.</p>
+<ul>
+<li>Ongoing accounting services</li>
+<li>Payroll services</li>
+<li>Annual accounting closing and financial statements</li>
+<li>Communication with tax authorities, social security institutions, and other public bodies</li>
+<li>Accounting and tax consulting</li>
+<li>Company registration</li>
+</ul>
 
-  <div class="grid">
-    <div class="card">Ongoing accounting services</div>
-    <div class="card">Payroll services</div>
-    <div class="card">Annual accounting closure and financial statements</div>
-    <div class="card">Communication with tax authorities and other institutions</div>
-    <div class="card">Accounting and tax consulting</div>
-    <div class="card">Company registration</div>
-  </div>
+<p>
+The scope of services and terms of cooperation are determined individually,
+depending on the client’s business activity and specific requirements.
+</p>
 </section>
-</main>
-
-<footer>
-  <p>This website presents a partnership between independent accounting practices. <a href="contact-en.html">Contact</a></p>
-</footer>
-
-<script>
-function changeLang(lang){
-  const page=window.location.pathname.split("/").pop();
-  if(lang==='en'){
-    if(page==='services.html') window.location.href='services-en.html';
-    if(page==='index.html') window.location.href='index-en.html';
-    if(page==='about.html') window.location.href='about-en.html';
-    if(page==='contact.html') window.location.href='contact-en.html';
-  }else if(lang==='bg'){
-    if(page==='services-en.html') window.location.href='services.html';
-    if(page==='index-en.html') window.location.href='index.html';
-    if(page==='about-en.html') window.location.href='about.html';
-    if(page==='contact-en.html') window.location.href='contact.html';
-  }
-}
-</script>
-
 </body>
 </html>
