--- a/index.html
+++ b/index.html
@@ -90,5 +90,25 @@ const lang = localStorage.getItem('lang') || 'bg';
 if (lang === 'en') window.location.href = 'index-en.html';
 function changeLang(l){localStorage.setItem('lang',l);location.reload();}
 </script>
+  <script>
+  const lang = localStorage.getItem('lang') || 'bg';
+
+  if (
+    (lang === 'en' && !window.location.pathname.includes('-en')) ||
+    (lang === 'bg' && window.location.pathname.includes('-en'))
+  ) {
+    const current = window.location.pathname.split("/").pop();
+    if (lang === 'en') window.location.href = current.replace('.html', '-en.html');
+    else window.location.href = current.replace('-en.html', '.html');
+  }
+
+  function changeLang(l) {
+    localStorage.setItem('lang', l);
+    const current = window.location.pathname.split("/").pop();
+    if (l === 'en') window.location.href = current.replace('.html', '-en.html');
+    else window.location.href = current.replace('-en.html', '.html');
+  }
+</script>
 </body>
 </html>
+
