services-en.html

--- a/services-en.html
+++ b/services-en.html
@@ -3,6 +3,25 @@
 <head>
 <meta charset="UTF-8">
 <title>Services | Accounting Partnership</title>
+  <style>
+:root {
+  --bg:#0f172a; --bg-light:#111827; --text:#e5e7eb;
+  --muted:#9ca3af; --accent:#38bdf8; --card:#020617; --border:#1f2933;
+}
+body{margin:0;font-family:system-ui;background:linear-gradient(180deg,var(--bg),var(--bg-light));color:var(--text)}
+a{color:var(--accent);text-decoration:none}
+header{border-bottom:1px solid var(--border);position:sticky;top:0;background:rgba(15,23,42,.9)}
+nav{display:flex;justify-content:space-between;align-items:center;padding:.5rem 1rem}
+.logo img{height:90px}
+nav ul{list-style:none;display:flex;gap:1rem;margin:0;padding:0;align-items:center}
+section{padding:4rem 1rem;text-align:center}
+p{color:var(--muted)}
+.cta{display:inline-block;margin-top:1.5rem;padding:.7rem 1.2rem;border-radius:6px;background:var(--accent);color:#020617;font-weight:600}
+.image-buttons{display:flex;justify-content:center;gap:2rem;margin-top:3rem;flex-wrap:wrap}
+.card{background:var(--card);border:1px solid var(--border);border-radius:10px;padding:1.5rem}
+.card img{width:300px;height:200px;object-fit:cover;border-radius:10px}
+footer{border-top:1px solid var(--border);padding:2rem 1rem;color:var(--muted);font-size:.85rem}
+</style>
 </head>
 
 <body>
@@ -49,4 +68,5 @@ depending on the client’s business activity and specific requirements.
 </script>
 </body>
 </html>
+
 
